macros/src/snapshots/event_handler_macro__event_handler__tests__processor_2.snap
---
source: macros/src/event_handler.rs
expression: formatted
---
pub struct EventEnvelope {
    pub event: Event,
    pub span: ::tracing::Span,
}
#[derive(::serde::Serialize, ::serde::Deserialize, Clone)]
pub enum Event {
    EventNoFields { id: ::uuid::Uuid },
}
impl Event {
    pub fn new_event_no_fields(&self) -> EventEnvelope {
        return EventEnvelope {
            span: ::tracing::Span::current(),
            event: Event::EventNoFields {
                id: ::uuid::Uuid::new_v4(),
            },
        };
    }
}
impl From<Event> for EventEnvelope {
    fn from(input: Event) -> EventEnvelope {
        EventEnvelope {
            span: ::tracing::Span::current(),
            event: input,
        }
    }
}
impl std::fmt::Debug for Event {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        match self {
            Event::EventNoFields => write!(f, stringify!(EventNoFields)),
            _ => write!(f, "Unknown Event"),
        }
    }
}
impl EventHandler {
    async fn test_processor_2(
        &self,
        env: EventEnvelope,
        #[allow(unused)]
        queue: &mut ::std::collections::VecDeque<EventEnvelope>,
    ) {
        let Event::EventNoFields = env.event else {
            unreachable!();
        };
        self.event_preprocess(&env.event);
        {
            println!("Hello world!");
        }
    }
    fn event_preprocess(&self, _event: &Event) {}
    #[tracing::instrument(skip_all, parent = &env.span)]
    pub async fn handle(
        &self,
        env: EventEnvelope,
        queue: &mut ::std::collections::VecDeque<EventEnvelope>,
    ) {
        use Event::*;
        tracing::debug!("handle: {:?}", env.event);
        match env.event {
            Event::EventNoFields => self.test_processor_2(env, queue).await,
        };
    }
    pub async fn run(&self, mut rx: ::tokio::sync::mpsc::Receiver<EventEnvelope>) {
        let mut queue: ::std::collections::VecDeque<EventEnvelope> = ::std::collections::VecDeque::new();
        loop {
            match rx.recv().await {
                Some(envelope) => queue.push_back(envelope),
                None => {
                    tracing::error!("event channel closed unexpectedly");
                    break;
                }
            }
            while let Ok(envelope) = rx.try_recv() {
                queue.push_back(envelope);
            }
            while let Some(envelope) = queue.pop_front() {
                self.handle(envelope, &mut queue).await;
            }
        }
    }
}
